--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   "homepage": "https://iondv.com",
   "version": "2.0.1",
   "dependencies": {
-    "@iondv/commons": "iondv/commons#semver:^2.0.1",
-    "@iondv/core": "iondv/core#semver:^2.0.3",
-    "@iondv/i18n": "iondv/i18n#semver:^0.0.1",
-    "@iondv/web": "iondv/web#semver:^2.0.3",
+    "@iondv/commons": "iondv/commons#main",
+    "@iondv/core": "iondv/core#main",
+    "@iondv/i18n": "iondv/i18n#main",
+    "@iondv/web": "iondv/web#main",
     "fast-clone": "^1.5.13",
     "merge": "^2.1.0"
   }
