--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "cluster": "bin/cluster.js",
     "www": "bin/www.js"
   },
+  "scripts": {
+    "postinstall": "postinstall.js"
+  },
   "directories": {
     "test": "test"
   },
@@ -26,6 +29,7 @@
     "@iondv/core": "iondv/core#main",
     "@iondv/i18n": "iondv/i18n#main",
     "@iondv/web": "iondv/web#main",
+    "copy-dir": "^1.3.0",
     "fast-clone": "^1.5.13",
     "merge": "^2.1.0"
   }
